# House-Price-Prediction

./: .gitignore  README.md  flake8_check.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: README-checkpoint.md  flake8_check-checkpoint.ipynb
data/: inference_predictions.csv  processed_df.parquet
house_prices/: preprocess.py  train.py
house_prices/.ipynb_checkpoints/: inference-checkpoint.py  preprocess-checkpoint.py
house_prices_package_by_shiva.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
models/: categorical_imputer.joblib  kitchen_quality_dict.joblib  model.joblib  numeric_imputer.joblib  one_hot_encoder.joblib  scaler.joblib
notebooks/: model-industrialization-1.ipynb  model-industrialization-final.ipynb
notebooks/.ipynb_checkpoints/: house-prices-modeling-checkpoint.ipynb  house-prices-modeling-correction-checkpoint.ipynb  model-industrialization-1-checkpoint.ipynb  model-industrialization-final-checkpoint.ipynb  modeling introduction-checkpoint.ipynb  modeling introduction-correction (1)-checkpoint.ipynb  updated_model-industrialization-1-checkpoint.ipynb
